# movielens-lightning-onboarding-demo

./: .gitignore  .lightningignore  README.md  pyproject.toml  requirements.txt  scratch.ipynb
recsys/: __init__.py  constants.py  model.py  movielens_datamodule.py
serving/: README.md  app.py  reccomender_demo.py  recommender_demo.py  server.py
training/: README.md  fetch_data.py  launch_job.py  optimize_data.py  sweep_launcher.py  train_movielens.py  train_movielens_tensor.py
