[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "recsys"
version = "0.0.0"
description = "Shared two-tower recommender library for this onboarding demo (training + serving)"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["recsys"]
